--- a/static/scss/_orders.scss
+++ b/static/scss/_orders.scss
@@ -96,6 +96,9 @@
   line-height: 21px;
   margin-bottom: 25px;
 }
+.ordering_address {
+  padding-top: 20px;
+}
 .ordering_table,
 .ordering_info {
   display: inline-block;
