Разобралась со скриптами

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -80,7 +80,7 @@
                             <a href="" class="page">3</a>
                             <a href="" class="page">Следующая</a>
                         </div>
-                        <div class="fright"><a href="" class="top-page">Наверх</a></div>
+                        <div class="fright"><a href="" class="top-page s-scroll" data-scroll="top">Наверх</a></div>
                     </div>
                 </div>
             </div>
