--- a/templates/brand.html
+++ b/templates/brand.html
@@ -11,7 +11,7 @@
 			<div class="sidebar fleft">
 				<div class="filter-cont sh">
 					<div class="catalog-title">Royal Canin</div>
-					<div class="filter-block opened default-opened">
+					<div class="filter-block opened default-opened s-filter-block">
 						<div class="filter-title special-title s-filter">Собаки:<span class="filter-title-arrow"></span></div>
 						<div class="subcontent s-filter-content">
 							<ul class="catalog-list">
@@ -21,7 +21,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="filter-block">
+					<div class="filter-block s-filter-block">
 						<div class="filter-title special-title s-filter">Кошки:<span class="filter-title-arrow"></span></div>
 						<div class="subcontent s-filter-content">
 							<ul class="catalog-list">
@@ -42,8 +42,8 @@
 						<li><a href="brand.html" class="inner-border">Pedigree</a></li>
 						<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
 					</ul>
-					<div class="brand-more">
-						<ul class="catalog-list">
+					<div class="brand-more s-filter-block">
+						<ul class="catalog-list s-filter-content">
 							<li><a href="brand.html" class="inner-border">New brand 1</a></li>
 							<li><a href="brand.html" class="inner-border">New brand 2</a></li>
 							<li><a href="brand.html" class="inner-border">Happy Dog</a></li>
@@ -61,7 +61,7 @@
 							<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
 						</ul>
 						<div class="brand-btn-cont">
-							<a href="" class="btn btn_block" data-originaltxt="Показать еще (15)">Показать еще (15)</a>
+							<a href="" class="btn btn_block s-filter" data-open-text="Показать еще (15)" data-close-text="Свернуть бренды">Показать еще (15)</a>
 						</div>
 					</div>
 				</div>	
