--- a/templates/card_not_avaliable.html
+++ b/templates/card_not_avaliable.html
@@ -37,7 +37,7 @@
 						<div class="mb36">
 							<div class="related-suggest-cont">
 								<a href="#layer-remind" class="btn btn-block fancybox">Сообщить о поступлении</a>
-								<div class="related-suggest">Мы нашли похожие<br/>товары!</div>
+								<div class="related-suggest s-scroll" data-scroll="related">Мы нашли похожие<br/>товары!</div>
 							</div>	
 							<div class="related-date">
 								Планируемая дата 
