--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -68,8 +68,8 @@
 					<li><a href="brand.html" class="inner-border">Pedigree</a></li>
 					<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
 				</ul>
-				<div class="brand-more">
-					<ul class="catalog-list">
+				<div class="brand-more s-filter-block">
+					<ul class="catalog-list s-filter-content">
 						<li><a href="brand.html" class="inner-border">New brand 1</a></li>
 						<li><a href="brand.html" class="inner-border">New brand 2</a></li>
 						<li><a href="brand.html" class="inner-border">Happy Dog</a></li>
@@ -87,7 +87,7 @@
 						<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
 					</ul>
 					<div class="brand-btn-cont">
-						<a href="" class="btn btn_block" data-originaltxt="Все бренды (92)">Все бренды (92)</a>
+						<a href="" class="btn btn_block s-filter" data-open-text="Показать еще (92)" data-close-text="Свернуть бренды">Все бренды (92)</a>
 					</div>
 				</div>
 			</div>
