--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -34,7 +34,7 @@
                         <a href="mailto:info@teenyweeny.ru" class="blue">info@teenyweeny.ru></a>
                     </div>
                 </div>
-                <div class="filter-block plr20 mb20">
+                <div class="filter-block plr20 mb20 s-filter-block">
                     <p class="semibold mb5">Реквизиты</p>
                     <div class="filter-content filter-contacts_content s-filter-content">
                         <p class="mb10">Интернет-магазин Sapato.ru представлен компанией: ООО "ЗАПАТО.РУ"</p>
@@ -80,12 +80,10 @@
                             <span class="def-color">+7(495) 643 11 08</span>
                         </p>
                     </div>
-                    <a href="#" class="filter_link blue dashed s-filter">
-                        <span class="s-filter-open">Посмотреть реквизиты</span>
-                        <span class="hidden s-filter-close">Скрыть реквизиты</span>
+                    <a href="#" class="filter_link blue dashed s-filter" data-open-text="Посмотреть реквизиты" data-close-text="Скрыть реквизиты">Посмотреть реквизиты</span>
                     </a>
                 </div>
-                <div class="filter-block mb5">
+                <div class="filter-block mb5 s-filter-block">
                     <p class="semibold plr20 mb5">Как нас найти</p>
                     <div class="filter-content filter-contacts_content s-filter-content">
                         <div class="plr20 mb15">
@@ -95,10 +93,7 @@
                         <div id="map_moscow" class="contects_map"></div>
                     </div>
                     <div class="plr20">
-                        <a href="#" class="filter_link blue dashed s-filter">
-                            <span class="s-filter-open">Москва, м. Курская. Схема проезда</span>
-                            <span class="hidden s-filter-close">Свернуть</span>
-                        </a>
+                        <a href="#" class="filter_link blue dashed s-filter" data-open-text="Москва, м. Курская. Схема проезда" data-close-text="Свернуть">Москва, м. Курская. Схема проезда</a>
                     </div>
                 </div>
             </div>
