--- a/templates/help.html
+++ b/templates/help.html
@@ -56,7 +56,7 @@
                         <div class="p20">
                             <h2>Про заказ</h2>
                         </div>
-                        <div class="filter-block">
+                        <div class="filter-block s-filter-block">
                             <div class="filter-help_title s-filter">1 Как заказать товар?<span class="filter-title-arrow"></span></div>
                             <div class="filter-content filter-help_content s-filter-content">
                                 <p class="semibold mb25">Ответ:</p>
@@ -65,7 +65,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="filter-block opened default-opened">
+                        <div class="filter-block opened default-opened s-filter-block">
                             <div class="filter-help_title s-filter">2 Как оформить заказ?<span class="filter-title-arrow"></span></div>
                             <div class="filter-content filter-help_content s-filter-content">
                                 <p class="semibold mb25">Ответ:</p>
@@ -74,7 +74,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="filter-block">
+                        <div class="filter-block s-filter-block">
                             <div class="filter-help_title s-filter">3 Как убедить енота чтобы он перестал стирать все подряд?<span class="filter-title-arrow"></span></div>
                             <div class="filter-content filter-help_content s-filter-content">
                                 <p class="semibold mb25">Ответ:</p>
