--- a/templates/includes/_card_recently_not_avaliable.html
+++ b/templates/includes/_card_recently_not_avaliable.html
@@ -1,6 +1,6 @@
 <div class="sh">
     <!-- id="related" only for "div.related-suggest", only for this page -->
-    <div class="p20" id="related">
+    <div class="p20" data-scrollTo="related">
         <h3 class="mb20">Похожие товары</h3>
         <div class="float-cont">
             <div class="catalog-item">
