--- a/templates/includes/_card_tabs.html
+++ b/templates/includes/_card_tabs.html
@@ -133,16 +133,16 @@
                 </div>
                 <div class="review-block vis-block">
                     <!-- review block is a single review item and (if exist) admin answer for this review -->
-                    <div class="review-item">
+                    <div class="review-item s-filter-block">
                         <div class="review-title">В целом - очень хорошо</div>
                         <div class="review-author">Дмитрий, 10 октября 2014</div>
                         <div class="review-txt">У меня два кастрированных кота 3 и 5 лет, едим Роял, никаких проблем нет. У меня два кастрированных кота 3 
                         и 5 лет, едим Роял, никаких проблем нет никаких проблем нет, едим Роял, никаких проблем нет никаких проблем нет шерсть прекрасная, уши и глаза чистые.
-                        <div class="review-txt-hidden">
+                        <div class="hidden s-filter-content">
                             Очень довольны выбором! Лучший корм, который покупал. У меня два кастрированных кота 3 
                             и 5 лет, едим Роял, никаких проблем нет никаких проблем нет, едим Роял, никаких проблем нет никаких проблем нет шерсть прекрасная, уши и глаза чистые.
                         </div>
-                        <div><a href="" class="show-more blue">Читать полностью</a></div>
+                        <div><a href="" class="show-more blue s-filter" data-open-text="Читать полностью"  data-close-text="Свернуть отзыв">Читать полностью</a></div>
                         </div>
                         <div class="review-rate">
                             <div class="rate-txt">Моя оценка: </div>
@@ -170,79 +170,81 @@
                         <div class="review-author">Администрация</div>
                     </div>
                 </div>
-                <div class="review-extend">
-                    <div class="review-block">
-                        <div class="review-item">
-                            <div class="review-title">4 из 5</div>
-                            <div class="review-author">2 октября 2014</div>
-                            <div class="review-txt">У меня два кастрированных кота 3 и 5 лет, едим Роял, никаких проблем нет. У меня два кастрированных кота 3 
-                            и 5 лет, едим Роял, никаких проблем нет никаких проблем нет, едим Роял, никаких проблем нет никаких проблем нет шерсть прекрасная, уши и глаза чистые.
-                            <div class="review-txt-hidden">
-                                Очень довольны выбором! Лучший корм, который покупал. У меня два кастрированных кота 3 
-                                и 5 лет, едим Роял, никаких проблем нет никаких проблем нет, едим Роял, никаких проблем нет никаких проблем нет шерсть прекрасная, уши и глаза чистые.
-                            </div>
-                            <div><a href="" class="show-more blue">Читать полностью</a></div>
-                            </div>
-                            <div class="review-rate">
-                                <div class="rate-txt">Моя оценка: </div>
-                                <div class="card-rate">
-                                    <div class="card-rate-item"></div>
-                                    <div class="card-rate-item"></div>
-                                    <div class="card-rate-item"></div>
-                                    <div class="card-rate-item"></div>
-                                    <div class="card-rate-item unactive"></div>
-                                </div>
-                                <div class="review-use">Полезный отзыв?
-                                    <div class="review-use-link mr5">
-                                        <a href="">Да</a><span class="super-txt">(1)</span>
+                <div class="s-filter-block">
+                    <div class="review-extend s-filter-content">
+                        <div class="review-block">
+                            <div class="review-item s-filter-block">
+                                <div class="review-title">4 из 5</div>
+                                <div class="review-author">2 октября 2014</div>
+                                <div class="review-txt">У меня два кастрированных кота 3 и 5 лет, едим Роял, никаких проблем нет. У меня два кастрированных кота 3
+                                    и 5 лет, едим Роял, никаких проблем нет никаких проблем нет, едим Роял, никаких проблем нет никаких проблем нет шерсть прекрасная, уши и глаза чистые.
+                                    <div class="hidden s-filter-content">
+                                        Очень довольны выбором! Лучший корм, который покупал. У меня два кастрированных кота 3
+                                        и 5 лет, едим Роял, никаких проблем нет никаких проблем нет, едим Роял, никаких проблем нет никаких проблем нет шерсть прекрасная, уши и глаза чистые.
                                     </div>
-                                    <div class="review-use-link">
-                                        <a href="">Нет</a><span class="super-txt">(0)</span>
+                                    <div><a href="" class="show-more blue s-filter" data-open-text="Читать полностью"  data-close-text="Свернуть отзыв">Читать полностью</a></div>
+                                </div>
+                                <div class="review-rate">
+                                    <div class="rate-txt">Моя оценка: </div>
+                                    <div class="card-rate">
+                                        <div class="card-rate-item"></div>
+                                        <div class="card-rate-item"></div>
+                                        <div class="card-rate-item"></div>
+                                        <div class="card-rate-item"></div>
+                                        <div class="card-rate-item unactive"></div>
+                                    </div>
+                                    <div class="review-use">Полезный отзыв?
+                                        <div class="review-use-link mr5">
+                                            <a href="">Да</a><span class="super-txt">(1)</span>
+                                        </div>
+                                        <div class="review-use-link">
+                                            <a href="">Нет</a><span class="super-txt">(0)</span>
+                                        </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="review-block">
+                            <div class="review-item s-filter-block">
+                                <div class="review-title">Собаке не понравилось...</div>
+                                <div class="review-author">Дмитрий, 10 октября 2014</div>
+                                <div class="review-txt">У меня два кастрированных кота 3 и 5 лет, едим Роял, никаких проблем нет. У меня два кастрированных кота 3
+                                    и 5 лет, едим Роял, никаких проблем нет никаких проблем нет, едим Роял, никаких проблем нет никаких проблем нет шерсть прекрасная, уши и глаза чистые.
+                                    <div class="hidden s-filter-content">
+                                        Очень довольны выбором! Лучший корм, который покупал. У меня два кастрированных кота 3
+                                        и 5 лет, едим Роял, никаких проблем нет никаких проблем нет, едим Роял, никаких проблем нет никаких проблем нет шерсть прекрасная, уши и глаза чистые.
+                                    </div>
+                                    <div><a href="" class="show-more blue s-filter" data-open-text="Читать полностью"  data-close-text="Свернуть отзыв">Читать полностью</a></div>
+                                </div>
+                                <div class="review-rate">
+                                    <div class="rate-txt">Моя оценка: </div>
+                                    <div class="card-rate">
+                                        <div class="card-rate-item"></div>
+                                        <div class="card-rate-item"></div>
+                                        <div class="card-rate-item"></div>
+                                        <div class="card-rate-item"></div>
+                                        <div class="card-rate-item unactive"></div>
+                                    </div>
+                                    <div class="review-use">Полезный отзыв?
+                                        <div class="review-use-link mr5">
+                                            <a href="">Да</a><span class="super-txt">(1)</span>
+                                        </div>
+                                        <div class="review-use-link">
+                                            <a href="">Нет</a><span class="super-txt">(0)</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="review-item review-admin">
+                                <div class="review-txt">
+                                    Мы сожалеем, что вам не подошел корм. Попробуйте из этой же серии корм <a href="">Urban Life Small Dog</a>. Он легче усваивается и в нем такое же количество минералов и витаминов. Это корм специально предназначен для легкого перехода с других кормов.
+                                </div>
+                                <div class="review-author">Администрация</div>
                             </div>
                         </div>
                     </div>
-                    <div class="review-block">
-                        <div class="review-item">
-                            <div class="review-title">Собаке не понравилось...</div>
-                            <div class="review-author">Дмитрий, 10 октября 2014</div>
-                            <div class="review-txt">У меня два кастрированных кота 3 и 5 лет, едим Роял, никаких проблем нет. У меня два кастрированных кота 3 
-                            и 5 лет, едим Роял, никаких проблем нет никаких проблем нет, едим Роял, никаких проблем нет никаких проблем нет шерсть прекрасная, уши и глаза чистые.
-                            <div class="review-txt-hidden">
-                                Очень довольны выбором! Лучший корм, который покупал. У меня два кастрированных кота 3 
-                                и 5 лет, едим Роял, никаких проблем нет никаких проблем нет, едим Роял, никаких проблем нет никаких проблем нет шерсть прекрасная, уши и глаза чистые.
-                            </div>
-                            <div><a href="" class="show-more blue">Читать полностью</a></div>
-                            </div>
-                            <div class="review-rate">
-                                <div class="rate-txt">Моя оценка: </div>
-                                <div class="card-rate">
-                                    <div class="card-rate-item"></div>
-                                    <div class="card-rate-item"></div>
-                                    <div class="card-rate-item"></div>
-                                    <div class="card-rate-item"></div>
-                                    <div class="card-rate-item unactive"></div>
-                                </div>
-                                <div class="review-use">Полезный отзыв?
-                                    <div class="review-use-link mr5">
-                                        <a href="">Да</a><span class="super-txt">(1)</span>
-                                    </div>
-                                    <div class="review-use-link">
-                                        <a href="">Нет</a><span class="super-txt">(0)</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="review-item review-admin">
-                            <div class="review-txt">
-                            Мы сожалеем, что вам не подошел корм. Попробуйте из этой же серии корм <a href="">Urban Life Small Dog</a>. Он легче усваивается и в нем такое же количество минералов и витаминов. Это корм специально предназначен для легкого перехода с других кормов.
-                            </div>
-                            <div class="review-author">Администрация</div>
-                        </div>
-                    </div>
+                    <div class="review-link-cont"><a href="" class="blue s-filter"  data-open-text="Показать еще 2 отзыва"  data-close-text="Скрыть часть отзывов">Показать еще 2 отзыва</a></div>
                 </div>
-                <div class="review-link-cont"><a href="" class="blue review-extend-link" data-open="Показать еще 2 отзыва" data-hid="Скрыть часть отзывов">Показать еще 2 отзыва</a></div>
             </div>
             <div class="fright w47">
                 <h3 class="mb16">Вам нравится товар?</h3>
