--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -11,7 +11,7 @@
 			<div class="sidebar fleft">
 				<div class="filter-cont sh">
 					<div class="catalog-title">Фильтр</div>
-					<div class="filter-block opened default-opened">
+					<div class="filter-block opened default-opened s-filter-block">
 						<div class="filter-title s-filter">Цена:<span class="filter-title-arrow"></span></div>
 						<div class="slider-form filter-content s-filter-content">
 							<div class="slider-range-cont">
@@ -29,7 +29,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="filter-block opened default-opened">
+					<div class="filter-block opened default-opened s-filter-block">
 						<div class="filter-title s-filter">Возраст:<span class="filter-title-arrow"></span></div>
 						<ul class="filter-content s-filter-content">
 							<li class="filter-option">
@@ -43,7 +43,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="filter-block opened default-opened">
+					<div class="filter-block opened default-opened s-filter-block">
 						<div class="filter-title special-title s-filter">Бренд:<span class="filter-title-arrow"></span></div>
 						<div class="subcontent s-filter-content">
 							<ul class="filter-content s-filter-content">
@@ -56,8 +56,8 @@
 									<div class="inner-border">Bozita<span class="super-txt">(34)</span><span class="option-del"></span></div>
 								</li>
 							</ul>
-							<div class="brand-more filter-section">
-								<ul class="catalog-list">
+							<div class="brand-more filter-section s-filter-block">
+								<ul class="catalog-list s-filter-content">
 									<li class="catalog-list-link filter-option">
 										<div class="inner-border">Brown<span class="super-txt">(34)</span><span class="option-del"></span></div>
 									</li>
@@ -74,7 +74,7 @@
 									</li>
 								</ul>
 								<div class="brand-btn-cont">
-									<a href="" class="btn btn_block" data-originaltxt="Показать еще (4)">Показать еще (4)</a>
+									<a href="" class="btn btn_block s-filter" data-open-text="Показать еще (4)" data-close-text="Свернуть бренды">Показать еще (4)</a>
 								</div>
 							</div>
 						</div>
