--- a/templates/filter.html
+++ b/templates/filter.html
@@ -48,7 +48,7 @@
 			<div class="level-up"><a href="">Каталог для собак</a></div>
 			<div class="filter-cont sh">
 				<div class="catalog-title">Корма</div>
-				<div class="filter-block opened default-opened">
+				<div class="filter-block opened default-opened s-filter-block">
 					<div class="filter-title s-filter">Тип корма:<span class="filter-title-arrow"></span></div>
 					<ul class="filter-content s-filter-content">
 						<li class="filter-option"><div class="inner-border">Сухие корма<span class="super-txt">(159)</span></div></li>
@@ -56,7 +56,7 @@
 						<li class="filter-option"><div class="inner-border">Лакомства<span class="super-txt">(34)</span></div></li>
 					</ul>
 				</div>
-				<div class="filter-block opened default-opened">
+				<div class="filter-block opened default-opened s-filter-block">
 					<div class="filter-title s-filter">Цена:<span class="filter-title-arrow"></span></div>
 					<div class="slider-form filter-content s-filter-content">
 						<div class="slider-range-cont">
@@ -74,7 +74,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="filter-block">
+				<div class="filter-block s-filter-block">
 					<div class="filter-title s-filter">Возраст:<span class="filter-title-arrow"></span></div>
 					<ul class="filter-content s-filter-content">
 						<li class="filter-option"><div class="inner-border">Щенок<span class="super-txt">(159)</span></div></li>
