Доразобралась со скриптами

--- a/templates/includes/_log_reg_layers.html
+++ b/templates/includes/_log_reg_layers.html
@@ -27,9 +27,9 @@
             <div class="label"><label for="f130">E-mail:</label></div>
             <input type="text" class="def-input" id="f130"/>
             <div class="label"><label for="password">Придумайте пароль:</label></div>
-            <input type="password" class="def-input" id="password1"/>
+            <input type="password" id="password1" class="def-input s-password" data-password="reg" />
             <label for="show_pass1" class="form_checkbox mb11">
-                <input type="checkbox" id="show_pass1"/><i></i>Показать пароль, чтобы проверить правильность ввода
+                <input type="checkbox" id="show_pass1" class="s-show-password" data-password="reg" /><i></i>Показать пароль, чтобы проверить правильность ввода
             </label>
             
             <div class="sub-cont mb25">
@@ -63,9 +63,9 @@
             <div class="label"><label for="f110">E-mail / мобильный телефон:</label></div>
             <input type="text" class="def-input" id="f110"/>
             <div class="label"><label for="password">Пароль:</label></div>
-            <input type="password" class="def-input mb9" id="password"/>
+            <input type="password" id="password" class="def-input mb9 s-password" data-password="login"/>
             <label for="show_pass" class="form_checkbox mb5">
-                <input type="checkbox" id="show_pass"/><i></i>Показать пароль
+                <input type="checkbox" id="show_pass" class="s-show-password" data-password="login"/><i></i>Показать пароль
             </label>
             
             <label for="rem" class="form_checkbox mb7">
