--- a/templates/ordering_success.html
+++ b/templates/ordering_success.html
@@ -42,10 +42,10 @@
             <div class="form_group_full">
                 <div class="form_inline form_group">
                     <label for="password" class="form_label">Придумайте пароль:</label>
-                    <input type="password" id="password" class="form_text" />
+                    <input type="password" id="password" class="form_text s-password" data-password="ordering" />
                 </div>
                 <label for="show_pass" class="form_checkbox">
-                    <input type="checkbox" id="show_pass"/><i></i>Показать пароль, чтобы проверить правильность ввода
+                    <input type="checkbox" id="show_pass" class="s-show-password" data-password="ordering" /><i></i>Показать пароль, чтобы проверить правильность ввода
                 </label>
             </div>
             <div class="form_group">
